src/components/Skills.css
* {
  scrollbar-width: none
}

*::-webkit-scrollbar {
  display: none;
}
.skills .title{
  text-shadow:
     -1px -1px 0 black,
      1px -1px 0 black,
     -1px  1px 0 black,
      1px  1px 0 black;
}
.skills {
    display: grid;
    gap: 40px;
    justify-content: center;
    padding-top: 95px;
}
.skill-content {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 100%;
  box-sizing: border-box;
}
.skills .glass:hover{
  transform: scale(1.08);
}
.skills-header {
  text-align: center;
  margin-bottom: 60px;
}
.skills .section{
padding: 0 2.5%;
}

.subtitle {
text-align: center;
font-family: sans-serif;
font-size:  25px;
margin-top: 15px;
}

.skill-header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 100%;
  overflow: hidden;
}

.iconlogo {
  width: 55px;
  height: 55px;
  object-fit: contain;
  margin-bottom: 20px;
}

.skills-row {
  display: grid;
  gap: 30px 30px;

  padding-left: 40px;
  padding-right: 40px;
  padding-bottom: 40px;
  padding-top: 40px; 

  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));

  max-width: 100vw;
  box-sizing: border-box;
  overflow-x: hidden;
  align-items: center;
  
  overflow: visible;
}
h2{
    width: 100%;
}
.progress {
  width: 100%;
  height: 6px;
  background: rgba(255, 255, 255, 0.15);
  border-radius: 10px;
  overflow: visible;
  box-sizing: border-box;
}
.skills h3{
    text-align: right;
}

.progress-fill {
  height: 100%;
  border-radius: 10px;
  transition: width 1s ease;
}

.title {
    font-family: sans-serif;
    font-size: 58px;
    margin-top: 50px;
}

.text {
    font-family: sans-serif;
    font-size: 20px;
    max-width: 600px;
}
.dark .subtitle{
    color: rgb(163, 163, 163);
    transition: 1s;
}

.dark .skills {
    background-color: #33057e;
    color: #fff;
    transition: 1s;
}

.light .skills {
    background:
        #ffffff;
        color: black;
}

.dark .text {
    color: rgb(163, 163, 163);
}

.light .text {
    color: rgb(63, 63, 63);
}

